# grocery-store-wars

./: .gitignore  README.md  blueprint.md  implementation-plan.md  package.json  vercel.json
.hermes/plans/: 2026-05-14_040000-gsw-dashboard.md
docs/plans/: 2026-05-14-gsw-dashboard.md  2026-05-19-gsw-dashboard.md
frontend/: TURSO_TOKEN.txt  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/dashboard/: big-gaps-table.tsx  department-chart.tsx  (+8 more)
frontend/src/db/: index.ts  queries.ts  schema.sql
frontend/src/hooks/: useData.ts
frontend/src/lib/: api.ts  cache.ts  hooks.ts  types.ts
frontend/src/types/: bcryptjs.d.ts  index.ts
scrapers/: .env  _analyze.py  _analyze2.py  _analyze3.py  _check_db_state.py  _check_matches.py  _match_and_seed.py  _sample_rejects.py  _test_fuzz.py  backfill_prices.py  check_db.py  dedup_iga.py  extract_sizes.py  flag_bad_matches.py  full_iga_scrape.py  full_iga_v2.py  full_scrape.py  install_pw.sh  match_products.py  match_v2_local.py  mercato_scrape.py  pyproject.toml  run_matcher.py  run_matcher_v2.py  run_matcher_v21.py  run_matcher_v22.py  run_matcher_v3.py  run_matcher_v4.py  run_mercato.py  run_staples.py  setup_pw.sh  test_db_connect.py  test_import.py  test_scrape.py
scrapers/grocery_store_wars_scrapers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scrapers/scrapers/: __init__.py  db.py  iga.py  matcher.py  mercato.py  price_updater.py  seed_staples.py  thriftway.py
scripts/: pipeline.sh
(+12 files in other folders)
