[project]
name = "grocery-store-wars-scrapers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "libsql-client>=0.3",
    "playwright>=1.44",
    "thefuzz>=0.22",
    "python-Levenshtein>=0.25",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
